CHANGELOG
=========

MyKnowledgeBase version 5.4 - june 2017
- new jquery navigation for mobile screens
- replaced select menu with toggle menu 
- files nav, header and style: added and removed code regarding new navigation
- files style and custom-editor-style: changed margin of several html tags to avoid margin collapsing
- in case of a child theme that contains file header: please replace this file

MyKnowledgeBase version 5.3 - april 2017
- removed page template with left sidebar
- because knowledgebase does not support left sidebar
- removed files page-sidebar-left and sidebar-left
- file style: minor changes

MyKnowledgeBase version 5.2 - april 2017
- file style: minor changes

MyKnowledgeBase version 5.1 - april 2017
- file single: added post class .post-single
- file style: changed margin and padding of several elements (layout improvement)
- both knowledgebase files: updated category and post query
- customizer: show or hide category description on knowledgebase page

MyKnowledgeBase version 5.0 - march 2017
- file style: changed margin of several elements to avoid margin collapsing
- cleaned up file style
- updated files content-list and custom-editor-style
- file functions: improved font family registering

MyKnowledgeBase version 4.9 - march 2017
- file style: fixed alignment issue of #respond

MyKnowledgeBase version 4.8 - march 2017
- file style: minor changes in html tags
- file style: styling of select tag (cross-browser compatibility)
- file style: added width and float to several elements (for better alignment)
- file functions and single: removed post format (status)
- several small adjustments

MyKnowledgeBase version 4.7 - january 2017
- added support for hentry tags
- updated files content-postmeta, content-list and single
- file style: adjusted css for inputs
- file style: improved comments display
- file custom-editor-style: removed theme colors (because theme can be customized)
- several small adjustments
