@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 5.4
+Version: 5.5
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
@@ -70,12 +70,12 @@ body {background:#fff; color:#333; font-family:'Open Sans', sans-serif; font-siz
 
 
 /* HEADINGS */
-h1 {font-size:2.25em; line-height:1.25em;}
-h2 {font-size:1.80em; line-height:1.25em;}
-h3 {font-size:1.45em; line-height:1.5em;}
-h4 {font-size:1.20em; line-height:1.5em;}
-h5 {font-size:1em; line-height:1.5em;}
-h6 {font-size:0.80em; line-height:2em;}
+h1 {clear:both; margin:0 0 10px; font-size:2.25em; line-height:1.25em;}
+h2 {clear:both; margin:0 0 10px; font-size:1.80em; line-height:1.25em;}
+h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5em;}
+h4 {clear:both; margin:0 0 10px; font-size:1.20em; line-height:1.5em;}
+h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:1.5em;}
+h6 {clear:both; margin:0 0 10px; font-size:0.80em; line-height:2em;}
 
 
 /* LINKS AND HTML TAGS */
@@ -151,8 +151,9 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* HEADER FIRST LOGO */
 .logo {width:35%; float:left;}
+.logo h1 {margin:0;}
 .logo h1 a:hover {text-decoration:none; color:#333;}
-.logo h2 {font-style:italic; font-size:1.20em;}
+.logo h2 {margin:0; font-style:italic; font-size:1.20em;}
 
 
 /* HEADER FIRST MENU */
@@ -197,7 +198,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* HEADER THIRD SEARCH BAR */
-#header-third .searchbar-title {width:49%; float:left;}
+#header-third .searchbar-title {width:49%; float:left; margin:0;}
 #header-third .search-form {width:49%; float:right; padding:0; text-align:right;} 
 
 
@@ -220,7 +221,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* PAGE */
-.page-title {clear:both; margin:0 0 20px;}
+.page-title {margin:0 0 20px;}
 .archive-description {width:100%; clear:both; float:left; font-style:italic;}
 .pagelink {width:100%; clear:both; float:left; padding:20px 0 10px;}
 
@@ -228,11 +229,11 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 /* POST */
 .post-list {width:100%; clear:both; float:left;}
 .post-single {width:100%; clear:both; float:left;}
-.post-title {clear:both; margin:0 0 20px;}
+.post-title {margin:0 0 20px;}
 .post-title a:hover {color:#333; text-decoration:none;}
-.post-title-single {clear:both; margin:0 0 20px;}
+.post-title-single {margin:0 0 20px;}
 .entry-content {width:100%; clear:both; float:left; margin:0 0 20px;}
-.sticky-title {clear:both; text-align:center; margin:10px 0 20px; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee;}
+.sticky-title {margin:10px 0 20px; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee; text-align:center;}
 .postmetadata {clear:both; margin:0 0 20px; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
 .more {width:100%; clear:both; float:left; margin:0 0 20px; padding:0 0 20px; border-bottom:1px solid #eee;}
 a.readmore {float:right; padding:2px 10px; background:#08a0ff; color:#fff; text-decoration:none;}
@@ -287,8 +288,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .comment-body {background:#f8f8f8; border:1px solid #eee; padding:10px; margin:0 0 20px;}
 .comment-content {padding:10px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
-.comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.45em;} 
-.comments-title {margin:0 0 20px;}
+.comments-title {margin:0 0 20px; font-size:1.45em;}
+.comment-reply-title, .no-comments {margin:0; font-size:1.45em;}
 .comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
 .bypostauthor .comment-content {font-style:italic;}
 .comment-awaiting-moderation {font-style:italic;}
@@ -310,7 +311,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* SIDEBAR AND WIDGETS */
 #sidebar {width:33%; float:right; padding:20px 0 0;}
 .widget {padding:0 0 10px; margin:0 0 20px; border-bottom:1px solid #eee;}
-.widgettitle {clear:both; margin:0 0 10px;}
+.widgettitle {margin:0 0 10px;}
 
 
 /* FOOTER */
